# rgo-lang

./: AGENTS.md  README.md  dune  dune-project  flake.nix  rgo.opam
.factory/: init.sh  services.yaml
.factory/runtime/: ascribed-result-struct-mode.rg  casted-result-match-return.go  casted-result-match-return.rg  cleanup-fast-path.go  cleanup-fast-path.rg  cleanup-scope.go  cleanup-scope.rg  deep-nested-result.rg  direct-result-value.go  direct-result-value.rg  final-return-fast-path.go  final-return-fast-path.rg  generic-enum-nested.go  generic-enum-ownership.go  generic-ownership.go  http-server.go  http-server.rg  interop-crud.rg  mixed-handlers.go  mixed-handlers.rg  nested-result-return.go  (+17 more)
docs/: PRD_rust_syntax_go_target_5.md
examples/: generic_enum_clone.rg  generic_enum_nested.rg  generic_enum_ownership.rg  generic_ownership.rg  generics.rg  impl_methods.rg  loops.rg  net_http_namespace.rg  non_consuming_call.rg  result_option.rg  shapes.rg  traits.rg
lib/: ast.ml  ast.mli  codegen.ml  codegen.mli  codegen_ownership.ml  codegen_ownership.mli  driver.ml  driver.mli  dune  exhaust.ml  exhaust.mli  interop.ml  interop.mli  lexer.ml  lexer.mli  parse_driver.ml  parse_driver.mli  parser.mly  resolver.ml  resolver.mli  token.ml  token.mli  typecheck.ml  typecheck.mli  types.ml  types.mli  version.ml
test/: codegen_test_helpers.ml  dune  test_codegen.ml  test_codegen_ownership.ml  test_exhaust.ml  test_interop.ml  test_lexer.ml  test_parser.ml  test_parser_snapshots.ml  test_resolver.ml  test_typecheck.ml  test_version.ml
test/e2e/: dune  test_e2e.ml
(+229 files in other folders)
