(test
 (name test_version)
 (modules test_version)
 (libraries rgo alcotest))

(test
 (name test_lexer)
 (modules test_lexer)
 (libraries rgo alcotest))

(test
 (name test_parser)
 (modules test_parser)
 (libraries rgo alcotest)
 (deps
  (glob_files ../examples/*.rg)))

(library
 (name test_parser_snapshots)
 (modules test_parser_snapshots)
 (inline_tests)
 (libraries rgo)
 (preprocess
  (pps ppx_expect)))

(test
 (name test_resolver)
 (modules test_resolver)
 (libraries rgo alcotest))

(test
 (name test_typecheck)
 (modules test_typecheck)
 (libraries rgo alcotest))

(test
 (name test_exhaust)
 (modules test_exhaust)
 (libraries rgo alcotest))

(test
 (name test_codegen)
 (modules test_codegen)
 (libraries rgo alcotest))
